smoothscroll working correctly

--- a/frontend_react/src/App.scss
+++ b/frontend_react/src/App.scss
@@ -187,3 +187,12 @@
     padding: 2rem;
   }
 }
+
+.scroll-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  will-change: transform;
+}
